week6/.metadata/.plugins/org.eclipse.cdt.ui/NewHope.build.log
09:34:05 **** Incremental Build of configuration Debug for project NewHope ****
make all 
Building file: ../src/NewHope.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/NewHope.d" -MT"src/NewHope.d" -o "src/NewHope.o" "../src/NewHope.cpp"
../src/NewHope.cpp: In function ‘void do_case()’:
../src/NewHope.cpp:23:2: error: ‘cin’ was not declared in this scope
  cin >> k >> s >> m;
  ^
../src/NewHope.cpp:23:2: note: suggested alternative:
In file included from ../src/NewHope.cpp:9:0:
/usr/include/c++/4.8/iostream:60:18: note:   ‘std::cin’
   extern istream cin;  /// Linked to standard input
                  ^
../src/NewHope.cpp:24:2: error: ‘vector’ was not declared in this scope
  vector<node> nodes(k);
  ^
../src/NewHope.cpp:24:2: note: suggested alternative:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from ../src/NewHope.cpp:10:
/usr/include/c++/4.8/bits/stl_vector.h:210:11: note:   ‘std::vector’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
../src/NewHope.cpp:24:13: error: expected primary-expression before ‘>’ token
  vector<node> nodes(k);
             ^
../src/NewHope.cpp:24:22: error: ‘nodes’ was not declared in this scope
  vector<node> nodes(k);
                      ^
../src/NewHope.cpp:36:18: error: expected primary-expression before ‘>’ token
  for (vector<node>::iterator it = nodes.begin(); it != nodes.end(); it++){
                  ^
../src/NewHope.cpp:36:19: error: ‘::iterator’ has not been declared
  for (vector<node>::iterator it = nodes.begin(); it != nodes.end(); it++){
                   ^
../src/NewHope.cpp:36:19: note: suggested alternatives:
In file included from /usr/include/c++/4.8/bits/stl_algobase.h:65:0,
                 from /usr/include/c++/4.8/bits/char_traits.h:39,
                 from /usr/include/c++/4.8/ios:40,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from ../src/NewHope.cpp:9:
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:118:12: note:   ‘std::iterator’
     struct iterator
            ^
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:118:12: note:   ‘std::iterator’
../src/NewHope.cpp:36:30: error: expected ‘;’ before ‘it’
  for (vector<node>::iterator it = nodes.begin(); it != nodes.end(); it++){
                              ^
../src/NewHope.cpp:36:50: error: ‘it’ was not declared in this scope
  for (vector<node>::iterator it = nodes.begin(); it != nodes.end(); it++){
                                                  ^
../src/NewHope.cpp:41:2: error: ‘cout’ was not declared in this scope
  cout << even> odd ? even : odd << endl;
  ^
../src/NewHope.cpp:41:2: note: suggested alternative:
In file included from ../src/NewHope.cpp:9:0:
/usr/include/c++/4.8/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
../src/NewHope.cpp:41:36: error: ‘endl’ was not declared in this scope
  cout << even> odd ? even : odd << endl;
                                    ^
../src/NewHope.cpp:41:36: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from ../src/NewHope.cpp:9:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
../src/NewHope.cpp: In function ‘int main()’:
../src/NewHope.cpp:44:2: error: ‘ios_base’ has not been declared
  ios_base::sync_with_stdio(false);
  ^
../src/NewHope.cpp:46:2: error: ‘cin’ was not declared in this scope
  cin >> t;
  ^
../src/NewHope.cpp:46:2: note: suggested alternative:
In file included from ../src/NewHope.cpp:9:0:
/usr/include/c++/4.8/iostream:60:18: note:   ‘std::cin’
   extern istream cin;  /// Linked to standard input
                  ^
make: *** [src/NewHope.o] Error 1

09:34:05 Build Finished (took 164ms)

